# pdf_checker_project

./: AGENTS.md  PLAN__convert_url.md  PLAN__css_tweaks.md  PLAN__handle_is_accessible.md  PLAN__high-level-implementation.md  PLAN__incorporate-pattern-header-html.md  PLAN__live_plus_poll.md  PLAN__move_prompt.md  PLAN__normalize_envar_loading.md  PLAN__poll.md  PLAN__retire_old_var.md  PLAN__run_synchronously_with_timeouts.md  PLAN__update_pattern_header.md  PLAN__uploader_form.md  PROMPT_live_plus_poll.md  README.md  TEMP_sampe_openrouter_output.json  TRACKER__poll.md  pyproject.toml  run_tests.py
.github/workflows/: ci_tests.yaml
config/: dotenv_example_file.txt  settings.py  settings_ci_tests.py  settings_run_tests.py  urls.py
pdf_checker_app/: admin.py  forms.py  models.py  views.py
pdf_checker_app/lib/: info.md  markdown_helpers.py  openrouter_helpers.py  pattern_header_upstream.html  pdf_helpers.py  prompt.md  sync_processing_helpers.py  version_helper.py
pdf_checker_app/management/commands/: update_pattern_header.py
pdf_checker_app/pdf_checker_app_templates/: info.html
pdf_checker_app/pdf_checker_app_templates/pdf_checker_app/: base.html  info.html  report.html  upload.html
pdf_checker_app/pdf_checker_app_templates/pdf_checker_app/fragments/: status_fragment.html  summary_fragment.html  verapdf_fragment.html
pdf_checker_app/tests/: test_markdown_helpers.py  test_pattern_header.py  test_pdf_helpers.py  test_polling_endpoints.py  test_sync_processing.py
scripts/: process_openrouter_summaries.py  process_verapdf_jobs.py
(+4 files in other folders)
