[project]
name = "pdf_checker_project"
version = "0.0.0"
description = "Webapp to validate PDF accessibility."
readme = "coming"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Django~=5.2.0",
    "httpx~=0.28.0",  # no current http requests; but here cuz we're switching to this from `requests`
    "beautifulsoup4~=4.12.0",
    "markdown~=3.6.0",
    "python-dotenv~=1.1.0",
    "python-magic~=0.4.0",  # File type detection
    "trio~=0.30.0",
]

[dependency-groups]
local = []
staging = [ 
    "mysqlclient~=2.2.0",  # not yet used on dev, but useful to confirm installation
    ]
prod = [ 
    "mysqlclient~=2.2.0", 
    ]
ci_tests = []
